<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="mygui.com.zohar.mytodolist.CreateATask">

    <TextView android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#7d7d61"
        android:id="@+id/categoryTv"
        android:textSize="20dp"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20dp"
        android:id="@+id/categoryET"
        android:background="#eff1e8"
        android:autoText="true"
        android:layout_below="@+id/categoryTv"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important"
        android:id="@+id/radioButton"
        android:textColor="#ff8533"

        android:textSize="20dp"
        android:layout_below="@+id/categoryET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        android:textStyle="bold" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal"
        android:id="@+id/radioButton2"
        android:textColor="#ff0055"

        android:checked="false"
        android:textSize="20dp"
        android:layout_alignTop="@+id/radioButton"
        android:layout_toRightOf="@+id/locationTV"
        android:layout_toEndOf="@+id/locationTV"
        android:textStyle="bold"
        android:theme="@android:style/Holo.Light.ButtonBar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/locationTV"
        android:textSize="20dp"
        android:textColor="#7d7d61"

        android:layout_below="@+id/radioButton"
        android:layout_alignLeft="@+id/categoryTv"
        android:layout_alignStart="@+id/categoryTv" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="20dp"
        android:id="@+id/teamNameET"
        android:background="#eff1e8"
        android:autoText="true"
        android:layout_below="@+id/locationTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:maxHeight="10dp" />

    <CalendarView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendarView"
        android:layout_below="@+id/teamNameET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/teamNameET"
        android:layout_alignEnd="@+id/teamNameET" />

    <MultiAutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Assign"
        android:id="@+id/multiAutoCompleteTextView"
        android:layout_below="@+id/calendarView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbarSize="@dimen/activity_horizontal_margin"
        android:layout_alignRight="@+id/calendarView"
        android:layout_alignEnd="@+id/calendarView"
        android:shadowColor="#e6e6e6" />

    <Button
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:text="@string/creat"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button" />



</RelativeLayout>
